@@ -362,25 +362,6 @@ CoDelQueueDisc::GetDropNext (void)
   return m_dropNext;
 }
 
-Ptr<const QueueDiscItem>
-CoDelQueueDisc::DoPeek (void)
-{
-  NS_LOG_FUNCTION (this);
-
-  Ptr<const QueueDiscItem> item = PeekDequeued ();
-
-  if (!item)
-    {
-      NS_LOG_LOGIC ("Queue empty");
-      return 0;
-    }
-
-  NS_LOG_LOGIC ("Number packets " << GetInternalQueue (0)->GetNPackets ());
-  NS_LOG_LOGIC ("Number bytes " << GetInternalQueue (0)->GetNBytes ());
-
-  return item;
-}
-
 bool
 CoDelQueueDisc::CoDelTimeAfter (uint32_t a, uint32_t b)
 {
